--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -131,7 +131,7 @@
             <div class="form-group inline-field">
                 <label class="h4">End Date & Time</label>
                 <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="validEndDateChecking(testsettings.endDate)"/>
-                <span class="error-msg" *ngIf="validEndDate">End date must be greater</span>
+                <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater</span>
             </div>
             <div class="form-group ip-restrictions-field">
                 <label class="h4">IP Restrictions</label>
@@ -200,6 +200,6 @@
                     </div>
                 </div>
             </div>
-        </form>       
+        </form>         
     </div>   
 </div>
