--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/rename-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/rename-category-dialog.html
@@ -6,14 +6,13 @@
     <md-dialog-content>
         <div class="form-group">
             <label class="h4">Section Name</label>
-            <input type="text" class="form-control" id="CategoryName" (keyup)="checkDuplicateCategoryName(category.categoryName)" [(ngModel)]="category.categoryName" name="CategoryName" #CategoryName="ngModel" required />
-            <span *ngIf="isCategoryNameExist" class="error-msg">Category Name Already Exists</span>
-            <span *ngIf="lengthOfCategoryName" class="error-msg">CategoryName Cannot be more than 150 characters long</span>
+            <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (change)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" maxlength="150" required />
+            <span *ngIf="isCategoryNameExist" class="error-msg">{{errormessage}}</span>
             <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span><span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
         <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary" [disabled]="isCategoryNameExist||lengthOfCategoryName" (click)="updateCategory(category)">Update</button>
+        <button type="submit" class="btn btn-primary" (click)="updateCategory(category)">Update</button>
     </md-dialog-actions>
 </div>
