--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/delete-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/delete-category-dialog.html
@@ -8,6 +8,6 @@
     </md-dialog-content>
     <md-dialog-actions>
         <button type="button" class="btn" md-dialog-close>No</button>
-        <button type="submit" class="btn btn-primary" (click)="removeCategoryData(categoryIdToDelete)">Yes</button>
+        <button type="submit" class="btn btn-primary" (click)="removeCategoryOperation()">Yes</button>
     </md-dialog-actions>
 </div>
