--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -20,7 +20,7 @@
                         <em class="material-icons pull-right" [mdMenuTriggerFor]="categoryMenu">more_vert</em>
                         <md-menu #categoryMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                             <button md-menu-item (click)="renameCategoryDialog(category)">Rename</button>
-                            <button md-menu-item (click)="deleteCategoryDialog()">Delete</button>
+                            <button md-menu-item (click)="deleteCategoryDialog(category)">Delete</button>
                         </md-menu>
                     </li>
                 </ul>
