--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -4,62 +4,66 @@
       <h2>Question</h2>
       <h5>Programming</h5>
     </div>
-    <form>
-      <div class="form-fields">
+    <form #codeSnippetForm="ngForm" (ngSubmit)="onSubmit(codeSnippetForm)">
+      <div class="form-fields" >
         <div class="form-group">
           <label class="h4">Section</label>
-          <select class="form-control half-width">
-            <option>Logical Ability</option>
-            <option>Option 1</option>
-            <option>Option 2</option>
-            <option>Option 3</option>
+          <select class="form-control half-width" id="category" ngModel required name="category" #category="ngModel">
+            <option></option>
+            <option *ngFor="let category of categoryList" (click)="selectCategory(category)">{{category.categoryName}}</option>
           </select>
-          <div class="errors-container"></div>
+          <div *ngIf="category.errors" class="errors-container">
+              <p class="text-danger">Please select a category</p>
+          </div>
         </div>
         <div class="form-group">
           <label class="h4">Difficulty Level</label>
-          <select class="form-control small-width">
+          <select class="form-control small-width" name="difficulty" [(ngModel)]="difficulty" (change)="selectDifficulty(difficulty)">
             <option>Easy</option>
             <option>Medium</option>
             <option>Hard</option>
           </select>
-          <div class="errors-container"></div>
+          <!--<div class="errors-container"></div>-->
         </div>
         <div class="form-group">
           <label class="h4">Question Details</label>
-          <textarea class="form-control half-width" placeholder="Question details here" rows="3"></textarea>
-          <div class="errors-container"></div>
+          <textarea class="form-control half-width" placeholder="Question details here" rows="3" ngModel id="detail" name="detail" #detail="ngModel" required minlength="10"></textarea>
+          <div class="errors-container" *ngIf="detail.errors && (detail.dirty || detail.touched)" >
+              <div [hidden]="!detail.errors.minlength">
+                  <p class="text-danger">Question detail should be minimum of 10 character</p>
+              </div>
+              <div [hidden]="!detail.errors.required">
+                  <p class="text-danger">Question detail is required</p>
+              </div>
+          </div>
         </div>
         <div class="form-group">
           <label class="h4">Code Languages</label>
           <md-chip-list class="form-control half-width" (click)="autocomplete.focus()">
-            <md-chip>Objective C <em class="material-icons">close</em></md-chip>
-            <md-chip>C++ <em class="material-icons">close</em></md-chip>
+            <md-chip *ngFor="let selectedLanguage of selectedLanguageList">{{selectedLanguage.languageName}}<i class="material-icons" (click)="removeLanguage(selectedLanguage)">close</i></md-chip>
             <md-input-container>
               <input mdInput placeholder="Code Languages" [mdAutocomplete]="code" #autocomplete>
             </md-input-container>
             <md-autocomplete #code="mdAutocomplete">
-              <md-option value="Objective C">Objective C</md-option>
-              <md-option value="C++">C++</md-option>
-              <md-option value="Option 1">Option 1</md-option>
-              <md-option value="Option 2">Option 2</md-option>
-              <md-option value="Option 3">Option 3</md-option>
+              <md-option *ngFor="let language of codingLanguageList" (click)="selectLanguage(language)" value="{{language.languageName}}">{{language.languageName}}</md-option>
             </md-autocomplete>
           </md-chip-list>
-          <div class="errors-container"></div>
+          <div class="errors-container">
+              <div *ngIf="nolanguageSelected">
+                  <p class="text-danger">Please select atleast one programming language</p>
+              </div>
+          </div>
         </div>
         <div class="form-group">
           <label class="h4">Score Settings</label>
-          <md-checkbox>Check code complexity</md-checkbox>
-          <md-checkbox>Check time complexity</md-checkbox>
-          <md-checkbox>Run basic test cases</md-checkbox>
-          <md-checkbox>Run corner test cases</md-checkbox>
-          <md-checkbox>Run necessary test cases</md-checkbox>
-          <div class="errors-container"></div>
+          <md-checkbox [checked]="question.codeSnippetQuestion.checkCodeComplexity" (change)="question.codeSnippetQuestion.checkCodeComplexity = !question.codeSnippetQuestion.checkCodeComplexity">Check code complexity</md-checkbox>
+          <md-checkbox [checked]="question.codeSnippetQuestion.checkTimeComplexity" (change)="question.codeSnippetQuestion.checkTimeComplexity = !question.codeSnippetQuestion.checkTimeComplexity">Check time complexity</md-checkbox>
+          <md-checkbox [checked]="question.codeSnippetQuestion.runBasicTestCase" (change)="question.codeSnippetQuestion.runBasicTestCase = !question.codeSnippetQuestion.runBasicTestCase">Run basic test cases</md-checkbox>
+          <md-checkbox [checked]="question.codeSnippetQuestion.runCornerTestCase" (change)="question.codeSnippetQuestion.runCornerTestCase = !question.codeSnippetQuestion.runCornerTestCase">Run corner test cases</md-checkbox>
+          <md-checkbox [checked]="question.codeSnippetQuestion.runNecessaryTestCase" (change)="question.codeSnippetQuestion.runNecessaryTestCase = !question.codeSnippetQuestion.runNecessaryTestCase">Run necessary test cases</md-checkbox>
         </div>
         <div class="form-group">
           <label class="h4">Test Case(s)</label>
-          <br />
           <button type="button" class="btn btn-primary" [hidden]="showTestCase" (click)="showTestCase=true">Add Test Case</button>
           <md2-accordion>
             <md2-accordion-tab class="collapsible-block" [hidden]="!showTestCase">
@@ -172,7 +176,7 @@
       </div>
       <div class="actions-area">
         <button type="button" class="btn">Cancel</button>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!codeSnippetForm.valid">Save</button>
       </div>
     </form>
   </div>
