--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -7,21 +7,28 @@
     <div class="form-group">
       <label class="h4">Current Password</label>
       <input type="password" class="form-control" [(ngModel)]="user.oldPassword"/>
-      <div class="errors-container"></div>
+      <div *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched)' class="errors-container">
+          <span [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
+      </div>
     </div>
     <div class="form-group">
       <label class="h4">New Password</label>
       <input type="password" class="form-control" [(ngModel)]="user.newPassword"/>
-      <div class="errors-container"></div>
+      <div *ngIf='newpassword.errors && (newpassword.dirty || newpassword.touched)' class="errors-container">
+          <span [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
+      </div>
     </div>
     <div class="form-group">
       <label class="h4">Confirm Password</label>
       <input type="password" class="form-control" [(ngModel)]="user.confirmPassword"/>
-      <div class="errors-container"></div>
+      <div *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class="errors-container">
+          <span class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
+      </div>
     </div>
+      <span class='error-msg text-danger'>{{message}}</span>
   </md-dialog-content>
   <md-dialog-actions>
     <button type="button" class="btn" md-dialog-close>Cancel</button>
-    <button type="submit" class="btn btn-primary" (click)="changePassword()">Save</button>
+    <button type="submit" class="btn btn-primary" (click)="changePassword(user)">Save</button>
   </md-dialog-actions>
 </div>
