--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
@@ -1,14 +1,14 @@
-﻿<div class="container">
-    <div class="userprofile">
-        <div class="title-area">
-            <h1>Profile <a href="#" [routerLink]="['edit']"><i class="material-icons">mode_edit</i></a></h1>
+﻿<div class='container'>
+    <div class='userprofile'>
+        <div class='title-area'>
+            <h1>Profile <a href='#' [routerLink]='['edit']'><i class='material-icons'>mode_edit</i></a></h1>
         </div>
-        <div class="fields-box">
-            <p><span class="h5">Name</span> {{user.name}}</p>
-            <p><span class="h5">Email</span> {{user.email}}</p>
-            <p><span class="h5">Contact Number</span>{{user.phoneNumber}}</p>
-            <p><span class="h5">Organization</span>{{user.organizationName}}</p>
-            <p class="h5 cp-dialog-link" (click)="changePasswordDialog()">Change Password</p>
+        <div class='fields-box'>
+            <p><span class='h5'>Name</span> {{user.name}}</p>
+            <p><span class='h5'>Email</span> {{user.email}}</p>
+            <p><span class='h5'>Contact Number</span>{{user.phoneNumber}}</p>
+            <p><span class='h5'>Organization</span>{{user.organizationName}}</p>
+            <p class='h5 cp-dialog-link' (click)='changePasswordDialog()'>Change Password</p>
         </div>
     </div>
 </div>
