--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -15,9 +15,7 @@
         <div class="form-group">
           <label class="h4">Email</label>
           <input type="email" class="form-control half-width" name="email" [(ngModel)]="editUser.email" disabled />
-          <div class="errors-container">
-
-          </div>
+          <div class="errors-container"></div>
         </div>
         <div class="form-group">
           <label class="h4">Contact Number</label>
