lint error solved, added validations

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -6,21 +6,21 @@
   <md-dialog-content>
     <div class="form-group">
       <label class="h4">Current Password</label>
-      <input type="password" class="form-control" [(ngModel)]="user.oldPassword"/>
+      <input type="password" class="form-control" [(ngModel)]="user.oldPassword" #oldpassword="ngModel" required/>
       <div *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched)' class="errors-container">
-          <span [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
+          <span [hidden]='!oldpassword.errors.required' class='error-msg'>Please enter new password</span>
       </div>
     </div>
     <div class="form-group">
       <label class="h4">New Password</label>
-      <input type="password" class="form-control" [(ngModel)]="user.newPassword"/>
+      <input type="password" class="form-control" [(ngModel)]="user.newPassword" #newpassword="ngModel" required/>
       <div *ngIf='newpassword.errors && (newpassword.dirty || newpassword.touched)' class="errors-container">
           <span [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
       </div>
     </div>
     <div class="form-group">
       <label class="h4">Confirm Password</label>
-      <input type="password" class="form-control" [(ngModel)]="user.confirmPassword"/>
+      <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" #confirmpassword="ngModel" required/>
       <div *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class="errors-container">
           <span class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
       </div>
