--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
@@ -1,7 +1,7 @@
 ﻿<div class='container'>
     <div class='userprofile'>
         <div class='title-area'>
-            <h1>Profile <a href='#' [routerLink]='['edit']'><i class='material-icons'>mode_edit</i></a></h1>
+            <h1>Profile <a href='#' [routerLink]="['edit']"><i class='material-icons'>mode_edit</i></a></h1>
         </div>
         <div class='fields-box'>
             <p><span class='h5'>Name</span> {{user.name}}</p>
