had to reset commits.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -45,20 +45,20 @@
           </md-menu>
         </div>
         <div class="questions-area">
-          <div *ngFor="let question of questionDisplay;let i = index" class="qs-block clearfix">
+          <div *ngFor="let q of questionDisplay;let i = index" class="qs-block clearfix">
             <div class="pull-left">
               <div class="qs-container">
                 <p class="qs-num">Q.{{i+1}}</p>
                 <div class="qs-text">
                   <p class="question">{{question.questionDetail}}</p>
-                  <div *ngFor="let option of question.singleMultipleAnswerQuestion?.singleMultipleAnswerQuestionOption; let j = index">
-                    <p *ngIf="QuestionType[question.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(option.isAnswer)" class="ans-option "><span>{{optionName[j]}}</span> <span>{{option.option}}</span></p>
+                  <div *ngFor="let o of q.singleMultipleAnswerQuestionOption; let j = index">
+                    <p *ngIf="QuestionType[q.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(option.isAnswer)" class="ans-option "><span>{{optionName[j]}}</span> <span>{{option.option}}</span></p>
                   </div>
                 </div>
               </div>
               <div class="mt10">
                 <p class="tags">{{question.category.categoryName}}</p>
-                <p class="tags">{{DifficultyLevel[question.difficultyLevel]}}</p>
+                <p class="tags">{{DifficultyLevel[q.difficultyLevel]}}</p>
               </div>
             </div>
             <em class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</em>
