Corrected validations, aded explanantion to parameter in comments

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -1,34 +1,40 @@
 ﻿<div class="dialog">
-  <div class="dialog-title clearfix">
-    <h1 class="pull-left" md-dialog-title>Change Password</h1>
-    <button type="button" class="pull-right" md-dialog-close><i class="material-icons">close</i></button>
-  </div>
-  <md-dialog-content>
-    <div class="form-group">
-      <label class="h4">Current Password</label>
-      <input type="password" class="form-control" [(ngModel)]="user.oldPassword" #oldpassword="ngModel" required/>
-      <div *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched)' class="errors-container">
-          <span [hidden]='!oldpassword.errors.required' class='error-msg'>Please enter new password</span>
-      </div>
+    <div class="dialog-title clearfix">
+        <h1 class="pull-left" md-dialog-title>Change Password</h1>
+        <button type="button" class="pull-right" md-dialog-close><i class="material-icons">close</i></button>
     </div>
-    <div class="form-group">
-      <label class="h4">New Password</label>
-      <input type="password" class="form-control" [(ngModel)]="user.newPassword" #newpassword="ngModel" required/>
-      <div *ngIf='newpassword.errors && (newpassword.dirty || newpassword.touched)' class="errors-container">
-          <span [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="h4">Confirm Password</label>
-      <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" #confirmpassword="ngModel" required/>
-      <div *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class="errors-container">
-          <span class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
-      </div>
-    </div>
-      <span class='error-msg text-danger'>{{message}}</span>
-  </md-dialog-content>
-  <md-dialog-actions>
-    <button type="button" class="btn" md-dialog-close>Cancel</button>
-    <button type="submit" class="btn btn-primary" (click)="changePassword(user)">Save</button>
-  </md-dialog-actions>
+    <md-dialog-content>
+        <div class="form-group">
+            <label class="h4">Current Password</label>
+            <input type="password" class="form-control" [(ngModel)]="user.oldPassword" #oldpassword="ngModel" required />
+            <div class="errors-container">
+                <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched)' [hidden]='!oldpassword.errors.required' class='error-msg'>Please enter your current password</span>
+                <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <label class="h4">New Password</label>
+            <input type="password" class="form-control" [(ngModel)]="user.newPassword" #newpassword="ngModel" required />
+            <div class="errors-container">
+                <span *ngIf='newpassword.errors && (newpassword.dirty || newpassword.touched)' [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
+                <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <label class="h4">Confirm Password</label>
+            <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" #confirmpassword="ngModel" required />
+            <div class="errors-container">
+                <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
+                <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
+                <span class='error-msg' [hidden]="!isMessageMismatch">{{messageMismatch}}</span>
+            </div>
+
+        </div>
+    </md-dialog-content>
+    <md-dialog-actions>
+        <button type="button" class="btn" md-dialog-close>Cancel</button>
+        <button type="submit" class="btn btn-primary" (click)="changePassword(user)">Save</button>
+    </md-dialog-actions>
 </div>
