--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
           <label class="h4">Question Details</label>
-          <textarea class="form-control half-width" placeholder="Question details here" rows="3" ngModel id="detail" name="detail" #detail="ngModel" required minlength="10"></textarea>
+          <ckeditor placeholder="Question details here" rows="3" ngModel id="detail" name="detail" #detail="ngModel" required minlength="10"></ckeditor>
           <div class="errors-container" *ngIf="detail.errors && (detail.dirty || detail.touched)" >
               <div [hidden]="!detail.errors.minlength">
                   <p class="text-danger">Question detail should be minimum of 10 character</p>
