--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
@@ -13,7 +13,7 @@
                     <form>
                         <div class="form-group">
                             <label class="h4">Connection String</label>
-                            <input required type="text" class="form-control" name="connectionStringName" [(ngModel)]="connectionStringName" />
+                            <input required type="text" class="form-control" name="connectionStringName" [(ngModel)]="connectionString.value" />
                             <p class="help-text">format help: server="servername";database="databasename";integrated security="true"</p>
                         </div>
                         <div class="action-buttons">
@@ -27,27 +27,27 @@
                     <form #EmailSettingsForm="ngForm">
                         <div class="form-group">
                             <label class="h4">Server Name</label>
-                            <input required type="text" class="form-control" [(ngModel)]="server" name="nameOfServer" #nameOfServer="ngModel" />
+                            <input required type="text" class="form-control" [(ngModel)]="emailSettings.server" name="nameOfServer" #nameOfServer="ngModel" />
                             <span *ngIf="nameOfServer.touched && !nameOfServer.valid && nameOfServer.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">Port</label>
-                            <input required type="number" class="form-control" [(ngModel)]="port" name="portNumber" #portNumber="ngModel" />
+                            <input required type="number" class="form-control" [(ngModel)]="emailSettings.port" name="portNumber" #portNumber="ngModel" />
                             <span *ngIf="portNumber.touched && !portNumber.valid && portNumber.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">User Name</label>
-                            <input required type="text" class="form-control" [(ngModel)]="userName" name="usersName" #usersName="ngModel" />
+                            <input required type="text" class="form-control" [(ngModel)]="emailSettings.userName" name="usersName" #usersName="ngModel" />
                             <span *ngIf="usersName.touched && !usersName.valid && usersName.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">Password</label>
-                            <input required type="password" class="form-control" [(ngModel)]="password" name="userPassword" #userPassword="ngModel" />
+                            <input required type="password" class="form-control" [(ngModel)]="emailSettings.password" name="userPassword" #userPassword="ngModel" />
                             <span *ngIf="userPassword.touched && !userPassword.valid && userPassword.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">Connection Security</label>
-                            <select class="from-control" [(ngModel)]="connectionSecurityOption" name="connectionSecurity">
+                            <select class="from-control" [(ngModel)]="emailSettings.connectionSecurityOption" name="connectionSecurity">
                                 <option value="None">None</option>
                                 <option value="SslOnConnect">SSL/TLS</option>
                                 <option value="StartTls">STARTTLS</option>
@@ -65,26 +65,26 @@
                     <form #CreateUserForm="ngForm">
                         <div class="form-group">
                             <label class="h4">Name</label>
-                            <input required pattern="^[a-zA-Z_ ]*$" type="text" class="form-control" [(ngModel)]="nameOfUser" name="usersName" #usersName="ngModel" maxlength="150" />
+                            <input required pattern="^[a-zA-Z_ ]*$" type="text" class="form-control" [(ngModel)]="registrationFields.name" name="usersName" #usersName="ngModel" maxlength="150" />
                             <span *ngIf="usersName.touched && !usersName.valid && usersName.errors.pattern" class="error-msg">Invalid Name</span>
                             <span *ngIf="usersName.touched && !usersName.valid && usersName.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">Email/User Name</label>
-                            <input required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{3}" type="text" class="form-control" [(ngModel)]="email" name="userEmail" #userEmail="ngModel" maxlength="255" />
+                            <input required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{3}" type="text" class="form-control" [(ngModel)]="registrationFields.email" name="userEmail" #userEmail="ngModel" maxlength="255" />
                             <span *ngIf="userEmail.touched && !userEmail.valid && userEmail.errors.pattern" class="error-msg">Invalid Email Address</span>
                             <span *ngIf="userEmail.touched && !userEmail.valid && userEmail.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">Password</label>
                             <input required pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,14}$" type="password" class="form-control"
-                                   [(ngModel)]="passwordOfUser" name="userPassword" #userPassword="ngModel" />
+                                   [(ngModel)]="registrationFields.password" name="userPassword" #userPassword="ngModel" />
                             <span *ngIf="userPassword.touched && !userPassword.valid && userPassword.errors.pattern" class="error-msg">Invalid Password</span>
                             <span *ngIf="userPassword.touched && !userPassword.valid && userPassword.errors.required" class="error-msg">*required</span>
                         </div>
                         <div class="form-group">
                             <label class="h4">Confirm Password</label>
-                            <input required type="password" class="form-control" [(ngModel)]="confirmPassword"
+                            <input required type="password" class="form-control" [(ngModel)]="registrationFields.confirmPassword"
                                    name="userConfirmtionPassword" #userConfirmtionPassword="ngModel" (change)="isValidPassword()" />
                             <span class="error-msg" *ngIf="errorMessage && errorMessage.touched">Invalid User Credential</span>
                             <span *ngIf="userConfirmtionPassword.touched && !userConfirmtionPassword.valid && userConfirmtionPassword.errors.required" class="error-msg">*required</span><br />
