added server side validation for change password when the passowrd enter is invalid

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -28,7 +28,8 @@
             <div class="errors-container">
                 <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
                 <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
-                <span class='error-msg' [hidden]="!isMessageMismatch">{{messageMismatch}}</span>
+                <br /><br />
+                <span class='error-msg' [hidden]="!errorCorrection">{{errorMesseage}}</span>
             </div>
 
         </div>
